[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vihrachev@anc.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
